@@ -94,12 +94,9 @@ void html_current_channels(FILE * ptr)
         tn = list_first(StatsChanhead);
         while (tn) {
             s = lnode_get(tn);
-            if (SP_HTML) {
-                if (ChanHasMode(s->name, CMODE_s)
-                    || ChanHasMode(s->name, CMODE_p)) {
-                    tn = list_next(StatsChanhead, tn);
-                    continue;
-                }
+            if (SP_HTML && (s->secret || s->private)) {
+                tn = list_next(StatsChanhead, tn);
+                continue;
             }
             if (s) {
                 e = find_exclude(s->name, NULL);
